<resources>
<string name="app_name">Mueen</string>
<string name="title_home">Home</string>
<string name="title_dashboard">Dashboard</string>
<string name="title_notifications">Notifications</string>
<string name="timer_phase_focus">Focus Time</string>
<string name="timer_phase_short_break">Short Break</string>
<string name="timer_phase_long_break">Long Break</string>
<string name="button_start">Start</string>
<string name="button_pause">Pause</string>
<string name="button_reset">Reset</string>
<string name="button_skip">Skip</string>
<string name="crn_label">CRN: 22598</string>
<string name="group_members_label">ABDULRAHMAN ABDULLAH ALOBAIDI S210019932, \nALWALEED TALAL A ALMUTAIRI S210064728</string>
<!-- Notes -->
<string name="hint_enter_note">Enter your note here…</string>
<string name="button_save_note">Save Note</string>
<string name="label_no_notes">No notes yet!</string>
<string name="desc_no_notes_icon">Icon indicating no notes</string>
<string name="toast_note_saved">Note saved!</string>
<string name="toast_enter_note">Please enter a note!</string>
<string name="snackbar_note_deleted">Note deleted</string>
<string name="snackbar_undo">Undo</string>
<string name="hint_edit_note">Edit your note</string>
<string name="dialog_title_edit_note">Edit Note</string>
<string name="dialog_save">Save</string>
<string name="dialog_cancel">Cancel</string>
<string name="toast_note_updated">Note updated!</string>
<string name="toast_note_cannot_be_empty">Note cannot be empty!</string>
<string name="error_loading_note">Error loading note data.</string>
<string name="error_updating_note">Error updating note.</string>
<!-- Reminders -->
<string name="header_add_reminder">Add New Reminder</string>
<string name="hint_reminder_title_required">Reminder Title*</string>
<string name="hint_reminder_description_optional">Description (Optional)</string>
<string name="hint_select_date_time_required">Select Date &amp; Time*</string>
<string name="button_set_reminder">Set Reminder</string>
<string name="header_upcoming_reminders">Upcoming Reminders</string>
<string name="label_no_reminders">No upcoming reminders!</string>
<string name="desc_no_reminders_icon">Icon indicating no reminders</string>
<string name="toast_enter_reminder_title">Please enter a title!</string>
<string name="toast_select_date_time">Please select date and time!</string>
<string name="toast_select_future_time">Please select a future time!</string>
<string name="toast_reminder_set">Reminder set!</string>
<string name="snackbar_reminder_deleted">Reminder deleted</string>
<string name="error_saving_reminder">Error saving reminder.</string>
<string name="error_scheduling_alarm">Error scheduling reminder alarm.</string>
<string name="desc_add_reminder_fab">Add new reminder</string>
<string name="dialog_title_add_reminder">Add Reminder</string>
<string name="dialog_add">Add</string>
<!-- Quotes -->
<string name="button_new_quote">New Quote</string>
<string name="default_quote_placeholder">Loading quote…</string>
<!-- Notifications -->
<string name="channel_name_reminders">Mueen Reminders</string>
<string name="channel_description_reminders">Notifications for upcoming study reminders</string>
<string name="channel_name_timer">Pomodoro Timer</string>
<string name="channel_description_timer">Notifications for Pomodoro timer phase changes</string>
<string name="notification_timer_phase_finished">"%1$s finished! Time for %2$s."</string>
<string name="notification_timer_phase_skipped">"%1$s skipped! Starting %2$s."</string>
<!-- General -->
<string name="nav_timer">Timer</string>
<string name="nav_notes">Notes</string>
<string name="nav_reminders">Reminders</string>
<string name="nav_quotes">Quotes</string>


    <!-- ... Add ALL other strings you find ... -->
</resources>