<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"> <!-- Dialog padding -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_textInputLayoutReminderTitle"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_reminder_title_required">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_edit_text_reminder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_textInputLayoutReminderDescription"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_reminder_description_optional">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_edit_text_reminder_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:minLines="2"
            android:gravity="top|start"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_textInputLayoutReminderDate"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_select_date_time_required">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_edit_text_reminder_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"
            android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
            app:drawableTint="?attr/colorControlNormal" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>