<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <TextView
        android:id="@+id/text_view_crn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/crn_label"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintBottom_toTopOf="@+id/text_view_phase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="CRN: 12345" />

    <TextView
        android:id="@+id/text_view_group_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_members_label"
        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintBottom_toTopOf="@+id/text_view_crn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Group: Alice, Bob, Charlie" />


    <TextView
        android:id="@+id/text_view_phase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintBottom_toTopOf="@+id/progress_circular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Focus Time" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:indicatorDirectionCircular="counterclockwise"
        app:indicatorSize="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"  /> <!-- Adjust bias to move circle up slightly -->


    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
        app:layout_constraintBottom_toBottomOf="@+id/progress_circular"
        app:layout_constraintEnd_toEndOf="@+id/progress_circular"
        app:layout_constraintStart_toStartOf="@+id/progress_circular"
        app:layout_constraintTop_toTopOf="@+id/progress_circular"
        tools:text="25:00" />

    <!-- LinearLayout for Indicator Dots -->
    <LinearLayout
        android:id="@+id/dots_indicator_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/progress_circular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:id="@+id/dot1"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/dot_indicator_inactive"/>

        <View
            android:id="@+id/dot2"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/dot_indicator_inactive"/>

        <View
            android:id="@+id/dot3"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/dot_indicator_inactive"/>

        <View
            android:id="@+id/dot4"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/dot_indicator_inactive"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dots_indicator_layout"> <!-- Constrain below dots -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start_pause"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/button_start"
            app:icon="@drawable/ic_baseline_play_arrow_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_reset_skip"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_reset"
            app:icon="@drawable/ic_baseline_replay_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>